--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -8,8 +8,13 @@ jobs:
     strategy:
       max-parallel: 5
 
-    steps:
-    - uses: actions/checkout@v3
+    steps:    
+    - name: Checkout
+      uses: actions/checkout@v4.1.1    
+    - name: Node.js
+      uses: actions/setup-node@v4.0.2
+      with:
+        node-version: 20
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
