--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -8,9 +8,8 @@ jobs:
     strategy:
       max-parallel: 5
 
-    steps:    
-    - name: Checkout
-      uses: actions/checkout@v4.1.1    
+    steps:        
+    - uses: actions/checkout@v4.1.1    
     - name: Node.js
       uses: actions/setup-node@v4.0.2
       with:
